[Fix] レイアウト スクロールバー出現による表示崩れをoverflow-yで抑制

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,7 +8,9 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-y: scroll;
 }
+
 footer {
   margin-top: auto;
 }
